unpackaged/main/default/objects/Additional_Account_Info__c/Additional_Account_Info__c.object-meta.xml
<CustomObject>
    <label>Additional Account Info</label>
    <nameField>
        <label>Additional Account Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>