unpackaged/main/default/objects/Additional_Account_Info__c/fields/Account_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_is_Active__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.status__c, &quot;Active&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account is Active?</label>
    <type>Checkbox</type>
</CustomField>