unpackaged/main/default/objects/Additional_Account_Info__c/fields/Account_SoldTo_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_SoldTo_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account SoldTo Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Additional Account Infos</relationshipLabel>
    <relationshipName>Additional_Account_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>