unpackaged/main/default/objects/Additional_Account_Info__c/fields/AccountOlderThan90Days__c.field-meta.xml
<CustomField>
    <fullName>AccountOlderThan90Days__c</fullName>
    <formula>If( Account__r.Subscription_Start_Date__c &lt; (TODAY()-90), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOlderThan90Days</label>
    <type>Checkbox</type>
</CustomField>