unpackaged/main/default/objects/Additional_Account_Info__c/fields/Accounttype_by_Owner__c.field-meta.xml
<CustomField>
    <fullName>Accounttype_by_Owner__c</fullName>
    <formula>Account__r.Accounttype_by_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounttype by Owner</label>
    <type>Text</type>
</CustomField>