unpackaged/main/default/objects/Additional_Account_Info__c/fields/Calculated_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Turnover__c</fullName>
    <formula>IF( Orders_customer__c = true, 0, 
If(Orders_last_year_rolling__c = 0, 0, 
Orders_last_year_rolling__c *  IF(Account__r.Average_Shopping_Basket__c = 0, Median_Basket_converted__c, IF((Account__r.zz_Transaction_volume_protections_p__c / Account__r.Average_Shopping_Basket__c / Orders_last_year_rolling__c) &gt; 0.25, Account__r.Average_Shopping_Basket__c, Median_Basket_converted__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>