unpackaged/main/default/objects/Additional_Account_Info__c/fields/Cancellation_Date_Legal_Product__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Legal_Product__c</fullName>
    <label>Cancellation Date Legal Product</label>
    <type>Date</type>
</CustomField>