unpackaged/main/default/objects/Additional_Account_Info__c/fields/Consent_Manager_creation_date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Manager_creation_date__c</fullName>
    <description>Used for Shopware</description>
    <label>Consent Manager creation date</label>
    <type>DateTime</type>
</CustomField>