unpackaged/main/default/objects/Additional_Account_Info__c/fields/Consent_Manager_last_update__c.field-meta.xml
<CustomField>
    <fullName>Consent_Manager_last_update__c</fullName>
    <description>Used for Shopware</description>
    <label>Consent Manager last update</label>
    <type>DateTime</type>
</CustomField>