unpackaged/main/default/objects/Additional_Account_Info__c/fields/Guarantees_last_year__c.field-meta.xml
<CustomField>
    <fullName>Guarantees_last_year__c</fullName>
    <label>Guarantees last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>