unpackaged/main/default/objects/Additional_Account_Info__c/fields/Has_Legal_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Has_Legal_Enterprise__c</fullName>
    <label>Has Legal Enterprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
                <default>true</default>
                <label>no</label>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>Termination receipt</fullName>
            </value>
            <value>
                <fullName>Termination done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>