unpackaged/main/default/objects/Additional_Account_Info__c/fields/Has_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Has_Zendesk__c</fullName>
    <label>Has Zendesk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
                <default>true</default>
                <label>no</label>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>Termination receipt</fullName>
            </value>
            <value>
                <fullName>Termination done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>