unpackaged/main/default/objects/Additional_Account_Info__c/fields/Implied_Average_Basket__c.field-meta.xml
<CustomField>
    <fullName>Implied_Average_Basket__c</fullName>
    <formula>IF(OR(ISBLANK(Orders_last_year_rolling__c), 
Orders_last_year_rolling__c = 0), 0,
(IF (Orders_customer__c = true, 0, 
Account__r.zz_expected_turnover__c / Orders_last_year_rolling__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implied Average Basket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>