unpackaged/main/default/objects/Additional_Account_Info__c/fields/index_of_procedures_first_creation_date__c.field-meta.xml
<CustomField>
    <fullName>index_of_procedures_first_creation_date__c</fullName>
    <description>Used for Shopware. index of procedures means Verfahrensverzeichnis</description>
    <label>index of procedures first creation date</label>
    <type>DateTime</type>
</CustomField>