unpackaged/main/default/objects/Additional_Account_Info__c/fields/index_of_procedures_last_update__c.field-meta.xml
<CustomField>
    <fullName>index_of_procedures_last_update__c</fullName>
    <description>Used for Shopware. Index of procedures means Verfahrensverzeichnis</description>
    <label>index of procedures last update</label>
    <type>DateTime</type>
</CustomField>