unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_Jubilaeumsmail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Jubilaeumsmail_Sent__c</fullName>
    <description>defines the date at which the last Jubiläumsmail was sent bei Legal CSM</description>
    <label>Last Jubiläumsmail Sent</label>
    <type>Date</type>
</CustomField>