unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_Legal_Product_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Legal_Product_Status_Change__c</fullName>
    <label>Last Legal Product Status Change</label>
    <type>Date</type>
</CustomField>