unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_legal_service_request__c.field-meta.xml
<CustomField>
    <fullName>Last_legal_service_request__c</fullName>
    <description>Used for Shopware</description>
    <label>Last legal service request</label>
    <type>DateTime</type>
</CustomField>