unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_lift_case_during_last_365_days__c.field-meta.xml
<CustomField>
    <fullName>Last_lift_case_during_last_365_days__c</fullName>
    <formula>Account__r.Last_lift_case_during_last_365_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last lift case during last 365 days</label>
    <type>Checkbox</type>
</CustomField>