unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_Report_order_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Report_order_date__c</fullName>
    <description>Used for Shopware</description>
    <label>Last Report order date</label>
    <type>DateTime</type>
</CustomField>