unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_Security_360_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Security_360_Status_Change__c</fullName>
    <label>Last Security 360 Status Change</label>
    <type>Date</type>
</CustomField>