unpackaged/main/default/objects/Additional_Account_Info__c/fields/Last_Zendesk_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Zendesk_Status_Change__c</fullName>
    <label>Last Zendesk Status Change</label>
    <type>Date</type>
</CustomField>