unpackaged/main/default/objects/Additional_Account_Info__c/fields/Legal_Account_last_login__c.field-meta.xml
<CustomField>
    <fullName>Legal_Account_last_login__c</fullName>
    <description>info from shopware</description>
    <label>Legal Account last login</label>
    <type>DateTime</type>
</CustomField>