unpackaged/main/default/objects/Additional_Account_Info__c/fields/Legal_Customer_number__c.field-meta.xml
<CustomField>
    <fullName>Legal_Customer_number__c</fullName>
    <description>Used by Shopware</description>
    <label>Legal Customer number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>