unpackaged/main/default/objects/Additional_Account_Info__c/fields/Legal_Text_last_creation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Text_last_creation__c</fullName>
    <description>Used for Shopware</description>
    <label>Legal Text last creation</label>
    <type>DateTime</type>
</CustomField>