unpackaged/main/default/objects/Additional_Account_Info__c/fields/Legal_Webinar_last_registration__c.field-meta.xml
<CustomField>
    <fullName>Legal_Webinar_last_registration__c</fullName>
    <description>Used for Shopware</description>
    <label>Legal Webinar last registration </label>
    <type>DateTime</type>
</CustomField>