unpackaged/main/default/objects/Additional_Account_Info__c/fields/Legal_Webinar_list__c.field-meta.xml
<CustomField>
    <fullName>Legal_Webinar_list__c</fullName>
    <description>Used for Shopware</description>
    <label>Legal Webinar list </label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>