unpackaged/main/default/objects/Additional_Account_Info__c/fields/Legal_Webinar_registration_Sum__c.field-meta.xml
<CustomField>
    <fullName>Legal_Webinar_registration_Sum__c</fullName>
    <description>Used for Shopware</description>
    <label>Legal Webinar registration Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>