unpackaged/main/default/objects/Additional_Account_Info__c/fields/Lift_probability__c.field-meta.xml
<CustomField>
    <fullName>Lift_probability__c</fullName>
    <formula>IF ( Orders_customer__c = true, 0,
IF(Orders_last_year_rolling__c = 0, 0, MAX(1 - (Implied_Average_Basket__c / Median_Basket_converted__c), MIN
(IF(Account__r.Average_Shopping_Basket__c = 0, 0, 
IF((Account__r.zz_Transaction_volume_protections_p__c / Account__r.Average_Shopping_Basket__c / Orders_last_year_rolling__c) &gt; 0.25, Orders_last_year_rolling__c * Account__r.Average_Shopping_Basket__c / Account__r.zz_expected_turnover__c - 1, 0)), 1), 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lift probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>