unpackaged/main/default/objects/Additional_Account_Info__c/fields/Median_Basket_converted__c.field-meta.xml
<CustomField>
    <fullName>Median_Basket_converted__c</fullName>
    <formula>$Setup.ShopStatistics__c.Median_Basket__c * CURRENCYRATE(TEXT(Account__r.CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Median Basket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>