unpackaged/main/default/objects/Additional_Account_Info__c/fields/Orders_bought__c.field-meta.xml
<CustomField>
    <fullName>Orders_bought__c</fullName>
    <label>Orders bought</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>