unpackaged/main/default/objects/Additional_Account_Info__c/fields/Orders_customer__c.field-meta.xml
<CustomField>
    <fullName>Orders_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orders customer</label>
    <type>Checkbox</type>
</CustomField>