unpackaged/main/default/objects/Additional_Account_Info__c/fields/Orders_last_year_rolling__c.field-meta.xml
<CustomField>
    <fullName>Orders_last_year_rolling__c</fullName>
    <inlineHelpText>This number is rolling. So you see the orders from today -365 days.</inlineHelpText>
    <label>Orders last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>