unpackaged/main/default/objects/Additional_Account_Info__c/fields/Shop_reviews_last_year__c.field-meta.xml
<CustomField>
    <fullName>Shop_reviews_last_year__c</fullName>
    <label>Shop reviews last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>