unpackaged/main/default/objects/Additional_Account_Info__c/fields/Start_Date_Legal_Product__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Legal_Product__c</fullName>
    <label>Start Date Legal Product</label>
    <type>Date</type>
</CustomField>