unpackaged/main/default/objects/Additional_Account_Info__c/fields/Start_Date_Protection__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Protection__c</fullName>
    <label>Start Date Protection</label>
    <type>Date</type>
</CustomField>