unpackaged/main/default/objects/Additional_Account_Info__c/fields/Start_Date_Security_360__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Security_360__c</fullName>
    <label>Start Date Security 360</label>
    <type>Date</type>
</CustomField>