unpackaged/main/default/objects/Additional_Account_Info__c/fields/Start_Date_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Zendesk__c</fullName>
    <label>Start Date Zendesk</label>
    <type>Date</type>
</CustomField>