unpackaged/main/default/objects/Additional_Account_Info__c/fields/Status_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Status_Zendesk__c</fullName>
    <label>Communication Status Zendesk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ready</fullName>
                <default>true</default>
                <label>ready</label>
            </value>
            <value>
                <fullName>blocked</fullName>
            </value>
            <value>
                <fullName>send info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>