unpackaged/main/default/objects/Additional_Account_Info__c/fields/Sum_created_Consent_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sum_created_Consent_Manager__c</fullName>
    <description>Used for Shopware</description>
    <label>Sum created Consent Manager</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>