unpackaged/main/default/objects/Additional_Account_Info__c/fields/Sum_created_Legal_Texts__c.field-meta.xml
<CustomField>
    <fullName>Sum_created_Legal_Texts__c</fullName>
    <description>Used for Shopware</description>
    <label>Sum created Legal Texts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>