unpackaged/main/default/objects/Additional_Account_Info__c/fields/Sum_index_of_procedures_services__c.field-meta.xml
<CustomField>
    <fullName>Sum_index_of_procedures_services__c</fullName>
    <description>Used for Shopware. Index of procedures means Verfahrensverzeichnis</description>
    <label>Sum index of procedures services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>