unpackaged/main/default/objects/Additional_Account_Info__c/fields/Sum_Legal_Account_logins_365__c.field-meta.xml
<CustomField>
    <fullName>Sum_Legal_Account_logins_365__c</fullName>
    <description>Used by shopware</description>
    <label>Sum Legal Account logins 365</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>