unpackaged/main/default/objects/Additional_Account_Info__c/fields/Sum_legal_service_requests_365__c.field-meta.xml
<CustomField>
    <fullName>Sum_legal_service_requests_365__c</fullName>
    <description>Used for Shopware</description>
    <label>Sum legal service requests 365</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>