unpackaged/main/default/objects/Additional_Account_Info__c/fields/Termination_Date_Protection__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date_Protection__c</fullName>
    <label>Termination Date Protection</label>
    <type>Date</type>
</CustomField>