unpackaged/main/default/objects/Additional_Account_Info__c/fields/Termination_Date_Security_360__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date_Security_360__c</fullName>
    <label>Termination Date Security 360</label>
    <type>Date</type>
</CustomField>