unpackaged/main/default/objects/Additional_Account_Info__c/fields/Termination_Date_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date_Zendesk__c</fullName>
    <label>Termination Date Zendesk</label>
    <type>Date</type>
</CustomField>