unpackaged/main/default/objects/Additional_Account_Info__c/fields/Winback_date__c.field-meta.xml
<CustomField>
    <fullName>Winback_date__c</fullName>
    <description>Date of the successful Winback of a Customer</description>
    <label>Winback date</label>
    <type>Date</type>
</CustomField>