unpackaged/main/default/objects/Additional_Account_Info__c/fields/Winback_successful__c.field-meta.xml
<CustomField>
    <fullName>Winback_successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set if Termination Date has been removed from an Account</description>
    <label>Winback successful</label>
    <type>Checkbox</type>
</CustomField>